# tg-cli

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  manage.sh
.claude/: .gitignore
.claude/memory/: MEMORY.md  architecture_decisions.md  feedback_commit_discipline.md  feedback_language.md  feedback_testing_strategy.md  user_preferences.md  workflow_handbook.md
.github/workflows/: ci.yml  coverage.yml  integration.yml  valgrind.yml
build-fuzz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ci/: check-ro-isolation.sh
docs/: README.md  SPECIFICATION.md  legal-research.md
docs/adr/: 0001-clean-architecture.md  0002-raii-memory-safety.md  0003-custom-test-framework.md  0004-dependency-inversion.md  0005-three-binary-architecture.md  0006-test-strategy.md  0007-mock-telegram-server.md
docs/dev/: coverage.md  logging.md  mock-server.md  mtproto-phase1-plan.md  mtproto-phase2-plan.md  mtproto-reference.md  telegram-bot-api.md  testing.md
docs/user/: setup-my-telegram-org.md
docs/userstory/: README.md  US-00-roadmap.md  US-01-test-coverage.md  US-02-tui-testable.md  US-03-login-flow.md  US-04-list-dialogs.md  US-05-self-info.md  US-06-read-history.md  US-07-watch-updates.md  US-08-media-download.md  US-09-user-info.md  US-10-search.md  US-11-tui-mvp.md  US-12-send-message.md  US-13-edit-delete-forward.md  US-14-file-upload.md  US-15-cross-dc-media.md  US-16-session-management.md  US-17-functional-coverage.md  US-18-onboarding-and-configuration.md  US-19-cross-dc-auth-transfer.md  US-20-fresh-install-handshake.md  US-21-operator-observability.md  US-22-rich-media-display.md  US-23-login-failure-recovery.md  US-24-tl-forward-compatibility.md  US-25-session-corruption-recovery.md  US-26-large-account-pagination.md  US-27-unicode-and-ansi-safety.md  US-28-rich-message-metadata.md  US-29-service-messages.md  US-30-compressed-and-batched-responses.md  US-31-transport-resilience.md  US-32-session-schema-migration.md  US-33-config-ini-robustness.md  US-34-resolver-cache.md  US-35-phone-migrate-on-signup.md  US-36-interactive-password-masking.md  US-37-server-service-frames.md
issues/: WORKFLOW.md
issues/blocked/: ARCH-05-domain-layer-planning.md  P4-04-dc-migration.md  P5-01-get-dialogs.md  P5-02-get-history.md  P5-05-search.md  P6-02-file-upload.md  P6-03-media-info.md  P7-02-user-info.md
issues/incoming/: P3-03-2fa-password.md  P4-06-updates.md  P4-07-service-message-handling.md  P5-03-send-message.md  P5-04-read-history.md  P5-06-edit-delete-forward-reply.md  P5-07-parse-v2-multi-entry.md  P5-08-dialog-title-join.md  P5-09-complex-message-parse.md  P6-01-file-download.md  P7-01-contacts.md  P7-03-resolve-username.md  P8-02-batch-output.md  P8-03-stdin-pipe.md  P9-02-repl.md  P9-03-realtime-updates.md  QA-10-ige-aes-alignment-validation.md  QA-12-auth-new-nonce-hash1-not-verified.md  QA-13-evp-digest-return-unchecked.md  QA-14-transport-send-alignment-check.md  QA-18-crypto-rand-bytes-int-truncation.md  QA-20-rpc-container-body-alignment.md  QA-23-transport-recv-3byte-prefix.md
issues/new/: QA-01-evp-cipher-ctx-null-check.md  QA-02-tl-writer-abort-on-oom.md  QA-04-logger-fclose-unchecked.md  QA-05-config-store-null-path.md  QA-08-no-integration-tests.md  QA-09-compute-msg-key-silent-failure.md  QA-11-rpc-strict-aliasing-endianness.md  QA-15-transport-3byte-prefix-incomplete.md  QA-16-logger-init-memory-leak.md  QA-17-config-free-sensitive-data.md  QA-19-session-msg-id-predictable.md  (+4 more)
libs/libptytest/: CMakeLists.txt  pty_assert.h  pty_internal.h  pty_screen.c  pty_session.c  pty_sync.c  ptytest.h
man/: tg-cli-ro.1  tg-cli.1  tg-tui.1
src/: main.c
tests/functional/: CMakeLists.txt  test_auth_flow_errors.c  test_config_dc_rsa_override.c  test_config_ini_robustness.c  test_config_wizard_batch.c  test_cross_dc_auth_transfer.c  test_crypto_kdf_functional.c  test_dc_session_cache_skip.c  test_deep_pagination.c  test_dialogs_cache_ttl.c  test_handshake_cold_boot.c  test_history_rich_metadata.c  test_ige_aes_functional.c  test_logger_lifecycle.c  test_login_flow.c  test_login_migrate.c  test_logout_rpc.c  test_mt_server_smoke.c  test_mtproto_crypto_functional.c  test_read_path.c  test_resolver_cache.c  test_rich_media_types.c  test_rpc_envelope.c  test_runner.c  test_send_stdin.c  test_service_frames.c  test_service_messages.c  test_session_corruption.c  test_session_migration.c  test_srp_math_functional.c  test_srp_roundtrip_functional.c  test_text_rendering_safety.c  test_tg_cli_read_dispatch.c  test_tl_forward_compat.c  test_tl_skip_message_functional.c  test_transport_resilience.c  test_tui_e2e.c  test_upload_download.c  test_write_path.c  test_wrong_session_id.c
tests/functional/pty/: CMakeLists.txt  password_harness.c  pty_tel_stub.c  pty_tel_stub.h  rl_harness.c  terminal_coverage_harness.c  test_config_wizard_pty.c  test_ctrl_c_exit.c  test_password_prompt.c  test_pty_smoke.c  test_readline.c  test_terminal_coverage.c  test_tui_resize.c  test_tui_startup.c
tests/fuzz/: CMakeLists.txt  fuzz_tl_parse.c
tests/fuzz/corpus/: seed_string_long  seed_vector_uint32
tests/integration/: CMakeLists.txt  integ_config.c  integ_config.h  test_helpers_integration.h  test_integration_live.c  test_integration_smoke.c  test_login.c  test_runner.c
tests/unit/: CMakeLists.txt  test_api_call.c  test_arg_parse.c  test_auth.c  test_auth_2fa.c  test_auth_logout.c  test_auth_session.c  test_auth_transfer.c  test_cache.c  test_config.c  test_dc_config.c  test_dc_session.c  test_domain_contacts.c  test_domain_dialogs.c  test_domain_edit_delete_forward.c  test_domain_history.c  test_domain_media.c  test_domain_read_history.c  test_domain_search.c  test_domain_self.c  test_domain_send.c  test_domain_updates.c  test_domain_upload.c  test_domain_user_info.c  test_fs_util.c  test_gzip.c  test_ige_aes.c  test_logger.c  test_media_index.c  test_mtproto_crypto.c  test_phase2.c  test_pii_redact.c  test_platform.c  test_readline.c  test_registry.c  test_rpc.c  test_runner.c  test_session_store.c  test_tg_tui_argv.c  test_tl_serial.c  (+12 more)
(+654 files in other folders)
